# Cowssss

./: .gitignore  .~lock.rules.xlsx#  CHANGELOG.md  Jenkinsfile  LICENSE.md  README.md  Release_Note.md  config.json  config.json.bak  main.py  requirements.txt  results.json  rules.xlsx  start.sh
Backend/: Cargo.toml
Backend/src/: lib.rs
Backend/src/core/: astar_pathfinding.rs  dijkstra_pathfinding.rs
Backend/src/enums/: cell_role.rs  cow_action.rs
Backend/src/model/: grid_model.rs
Backend/src/model/cell/: cell_model.rs  cell_structure.rs
Backend/src/model/cow/: cow_model.rs  cow_structure.rs
Backend/src/model/grid/: grid_model.rs  grid_structure.rs
Backend/src/services/: cow_service.rs  game_service.rs  grid_service.rs
Frontend/: index.html  vite.config.js
V1/: README.md  config.json
V1/data/: analysis_results.py
V1/simulation/: V.py  box.py  cow.py
data/: 20240614_1045.csv  20240614_1046.csv  20240616_2130.csv  20240616_2133.csv  20240616_2135.csv  analysis_results.py  cows_data.csv  result.py
simulation/: V.py  box.py  cow.py  simulate_cow.py
simulation/_temp/: test_torch.py
simulation/algorithm/: algorithms.py
simulation/config_out/: file_out_1.json  file_out_2.json
