[package]
name = "cowssss"
description = "Backend for Cowssss application"
repository = "https://github.com/teravla/Cowssss"
license-file = "LICENSE"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # necessary for wasm

[dependencies]
wasm-bindgen = "0.2.105"  # for JS interop
web-sys = { version = "0.3.82", features = ["CanvasRenderingContext2d", "console"] }
js-sys = "0.3.82"